fix: update accordion headers to use h3 for improved semantic structure and better mobile readability

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -130,10 +130,6 @@ section.content {
   border-color: var(--teal-500);
 }
 
-.accordion button {
-  font-size: 1.5rem;
-}
-
 .accordion-button:not(.collapsed) {
   background-color: var(--teal-dark);
   color: var(--light-50);
@@ -144,7 +140,7 @@ section.content {
   text-decoration-color: inherit;
 }
 
-.card .card-title {
+.card .card-title, .accordion button {
   font-size: 1.3rem;
 }
 
@@ -308,7 +304,7 @@ footer a {
     font-size: 1.75rem;
   }
 
-  .card .card-title {
+  .card .card-title, .accordion button {
     font-size: 1.75rem;
   }
 
